Incorporación de css

--- a/index.html
+++ b/index.html
@@ -3,29 +3,31 @@
 
     <head>
         <title> Mi Portafolio Personal </title>
+        <link rel="stylesheet" href="./style.css" />
     </head>
 
     <body>
         <header>
             <nav>
                 <ul>
-                    <a href="#Acerca-de-Mí">Acerca de mí</a>
-                    <a href="#Habilidades">Experiencia</a>
-                    <a href="#Experiencia-Laboral">Proyectos</a>
-                    <a href="#Proyectos">Contacto</a>
-                    <a href="#Contacto">Contacto</a>
+                    <a class="menu-item" href="#Acerca-de-Mí">Acerca de mí</a>
+                    <a class="menu-item" href="#Habilidades">Habilidades</a>
+                    <a class="menu-item" href="#Experiencia-Laboral">Experiencia Laboral</a>
+                    <a class="menu-item" href="#Proyectos">Proyectos</a>
+                    <a class="menu-item" href="#Contacto">Contacto</a>
                 </ul>
             </nav>
-           <h1>Alejandra Beatriz Gómez Paredes</h1>   
+           <h1>Alejandra Beatriz Gómez Paredes</h1>
+           <h2>Estudiante de Kinesiología y Fisiatría</h2>   
         </header>
         <main>
-            <section> id="Acerca de Mí"
+            <section id="Acerca de Mí">
                 <h2> Acerca de Mí </h2>
                 <p>
                     Recién graduada del Bachillerato Técnico con especialidad Contabilidad, y actualmente cursando la carrera de Kinesiología y Fisiatría. Soy una persona proactiva, con valores basados en el compromiso, orden y eficacia, buscando desarrollarme en áreas específicas que añadan valor agregado a mi perfil, cimentándome a través de la autoformación. Deseo aportar mis conocimientos adquiridos y consolidarme profesionalmente en una compañía que solo permita potenciar nuevas áreas de interés con miras a contribuir y ampliar mi trayectoria.
                 </p>
             </section>
-            <section> id="Habilidades"
+            <section id="Habilidades">
                 <h2> Habilidades </h2>
                 <ul>
                  <li>Flexibilidad</li>
@@ -34,7 +36,7 @@
                  <li>Creatividad</li>      
                 </ul>
             </section>
-            <section> id="Experiencia Laboral"
+            <section id="Experiencia Laboral">
                 <h2> Experiencia Laboral </h2> 
                 <ul>
                   <li> 
@@ -47,7 +49,7 @@
                 </ul>     
                   </li>   
             </section>
-            <section> id="Proyectos"
+            <section id="Proyectos">
                 <h2> Proyectos</h2>
                 <ul>
                     <li>
@@ -58,16 +60,16 @@
                      </li>
                 </ul>
             </section>
-            <section> id="Contacto"
+            <section id="Contacto">
                 <h2> Contacto </h2>
                 <ul>
                     <li> Email: alejandragomezag6572@gmail.com </li>
                     <li> Teléfono: +595 986 570085</li>
                 </ul>
             </section>            
-        </main>
-    </body>  
-    <footer>
+        </main>  
+      <footer>
         <p> Copyright &copy; 2024 </p>
-    </footer>
+      </footer>
+    </body>
 </html>
